# cache-proxy

./: Cargo.toml  README.md
.github/workflows/: rust.yml
scripts/: start_redis.ps1  test_request.ps1
src/: cache.rs  main.rs
