[package]
name = "cache-proxy"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-http = "3.11.0"
actix-web = "4.11.0"
anyhow = "1.0.98"
awc = "3.7.0"
base64 = "0.22.1"
clap = {version = "4", features = ["derive"]}
env_logger = "0.11.8"
redis = "0.32.3"
serde = "1.0.219"
serde_json = "1.0.140"
sha2 = "0.10.9"
